k8s/fire-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fire-mysql
  labels:
    app: fire-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fire-mysql
  template:
    metadata:
      name: fire-mysql
      labels:
        app: fire-mysql
    spec:
      containers:
        - name: fire
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: fire-mysql-pvc
