k8s/fire-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fire-mysql
spec:
  selector:
    app: fire-mysql
  ports:
    - protocol: TCP
      port: 3308
      targetPort: 3306
  type: LoadBalancer
