k8s/fire-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fire-redis
spec:
  selector:
    app: fire-redis
  ports:
    - protocol: TCP
      port: 6379
      nodePort: 31379
      targetPort: 6379
  type: NodePort
