k8s/fire-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fire
spec:
  selector:
    app: fire
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
